<resources>
    <string name="app_name">Plant App</string>
    <string name="next">Next</string>
    <string name="title_intro_1">Identify Plants</string>
    <string name="title_intro_2">Learn Many Plants Species</string>
    <string name="title_intro_3">Read Many Articles About Plant</string>
    <string name="text_intro_1">You can identify the plants you don\'t know through your camera</string>
    <string name="text_intro_2">Let\'s learn about the many plant species that exist in this world</string>
    <string name="text_intro_3">Let\'s learn more about beautiful plants and read many articles about plants and gardening</string>
    <string name="aboutInfo">From HCMC-VNU</string>
    <string name="hello">Hello</string>
    <string name="login_description">Let’s Learn More About Plants</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_account">Remember me</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="not_account">Don’t Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">New Account</string>
    <string name="create_account">Let\'s create new account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_password">Change Password</string>
    <string name="sign_up_new_account">Sign up for a new account</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="sent_mail_reset_successfully">Check your email. Then click on the link in the mailbox to change the password again.</string>
    <string name="full_name">Full Name</string>
    <string name="name_not_empty">Name must not be empty</string>
    <string name="des_not_empty">Description must not be empty</string>
    <string name="please_chose_species">Please chose species</string>
    <string name="list_image_not_empty">Image must not be empty</string>
    <string name="email_not_empty">Email must not be empty</string>
    <string name="email_invalid">Invalid email</string>
    <string name="password_not_empty">Password must not be empty</string>
    <string name="password_invalid">Invalid password</string>
    <string name="press_back_exit">Press Back again to exit</string>
    <string name="password_not_same">Passwords are not the same</string>
    <string name="profile">PROFILE</string>
    <string name="home">HOME</string>
    <string name="intro_3">Let’s Learn More About Plants</string>
    <string name="search_for_plants">Search For Plants</string>
    <string name="identify_uppercase">IDENTIFY</string>
    <string name="species_uppercase">SPECIES</string>
    <string name="articles_uppercase">ARTICLES</string>
    <string name="plant_types">Plant Types</string>
    <string name="photography">Photography</string>
    <string name="quantity_types_of_plants">Types of Plants</string>
    <string name="unlocated">UnLocated</string>
    <string name="species">Species</string>
    <string name="articles">Articles</string>
    <string name="search_for_species">Search For Species</string>
    <string name="search_for_articles">Search For Articles</string>
    <string name="search_for">Search For</string>
    <string name="kingdom">Kingdom</string>
    <string name="family">Family</string>
    <string name="description">Description</string>
    <string name="camera_not_available">Camera not available</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_your_device">Select from your device</string>
    <string name="cancel">Cancel</string>
    <string name="upload_sucess">Upload success</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="save">Save</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="remove_all_picture">Remove all picture</string>
    <string name="plant_name">Plant Name</string>
    <string name="enter_new_chip">Enter new chip</string>
    <string name="error_when_add_plant">Error when adding new plant</string>
    <string name="don_have_favorite">You don\'t have any favorites yet …</string>
</resources>