<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_white_15dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvCamera"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/take_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vSpacer"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_stroke_grey"
                app:layout_constraintTop_toBottomOf="@+id/tvCamera" />

            <TextView
                android:id="@+id/tvGallery"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/select_from_your_device"
                app:layout_constraintTop_toBottomOf="@+id/vSpacer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvCancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/bg_rounded_white_15dp"
            android:paddingVertical="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/csSelect" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
