<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginVertical="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:elevation="10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_review_plant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/tv_name_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="17sp"
            android:textStyle="bold|normal"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/layout_kingdom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/big_tag"
                    android:textSize="12sp"
                    android:textAllCaps="true"
                    android:text="@string/kingdom"/>

                <TextView
                    android:id="@+id/tv_kingdom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/info_text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_family"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/big_tag"
                    android:textSize="12sp"
                    android:textAllCaps="true"
                    android:text="@string/family"/>

                <TextView
                    android:id="@+id/tv_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/info_text"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/big_tag"
            android:textSize="12sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tv_description_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/info_text"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusableInTouchMode="true"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>