<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:elevation="5dp"
    android:background="@color/white"
    android:layout_marginVertical="10dp">

    <ImageView
        android:id="@+id/view"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@color/background_shimmer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_shimmer"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/layout_kingdom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/background_shimmer"
                    android:text="@string/kingdom"
                    android:textAllCaps="true"
                    android:textColor="@color/background_shimmer"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:background="@color/background_shimmer"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_family"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/background_shimmer"
                    android:text="@string/family"
                    android:textAllCaps="true"
                    android:textColor="@color/background_shimmer"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:background="@color/background_shimmer"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_shimmer"
            android:text="@string/description"
            android:textAllCaps="true"
            android:textColor="@color/background_shimmer"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_description_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/background_shimmer"
            android:maxLines="2"
            android:text="\n"
            android:textSize="12sp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>